--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,13 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+firebase-debug.log
+.firebase
+
+/reports
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
