--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@angular/service-worker": "~12.1.2",
     "firebase": "^9.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
