--- a/.github/workflows/deploy-app-firebase-workflow.yml
+++ b/.github/workflows/deploy-app-firebase-workflow.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Build Angular
         run: |
           npm install
-          npm run build -- --prod --base-href 'https://fem-readup-search-engine.web.app/'
+          npm run build -- --prod --base-href 'https://fem-readup.web.app/'
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --project fem-readup --only hosting:fem-readup-search-engine
+          args: deploy --project fem-readup --only hosting:fem-readup
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
