--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "build:ci": "npm run clean && npm run build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "stats": "ng build --named-chunks --stats-json && webpack-bundle-analyzer dist/*/stats.json"
   },
   "private": true,
   "dependencies": {
