--- a/package.json
+++ b/package.json
@@ -8,23 +8,22 @@
     "build": "ng build",
     "build:ci": "npm run clean && npm run build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "stats": "ng build --named-chunks --stats-json && webpack-bundle-analyzer dist/*/stats.json"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.11",
-    "@angular/cdk": "~13.3.9",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
+    "@angular/animations": "^14.2.1",
+    "@angular/cdk": "^14.2.1",
+    "@angular/common": "^14.2.1",
+    "@angular/compiler": "^14.2.1",
+    "@angular/core": "^14.2.1",
     "@angular/fire": "^7.3.0",
-    "@angular/forms": "~13.3.11",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
-    "@angular/service-worker": "~13.3.11",
+    "@angular/forms": "^14.2.1",
+    "@angular/material": "^14.2.1",
+    "@angular/platform-browser": "^14.2.1",
+    "@angular/platform-browser-dynamic": "^14.2.1",
+    "@angular/router": "^14.2.1",
+    "@angular/service-worker": "^14.2.1",
     "firebase": "^9.7.0",
     "lazysizes": "^5.3.2",
     "rxjs": "~6.6.0",
@@ -32,9 +31,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.9",
-    "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "~13.3.11",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular/cli": "^14.2.1",
+    "@angular/compiler-cli": "^14.2.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
