--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^9.10.0",
     "lazysizes": "^5.3.2",
     "rxjs": "~6.6.0",
+    "source-map-support": "^0.5.21",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
