--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,18 +1,18 @@
-name: CI
+name: Lighthouse
 on: [push]
 jobs:
   lighthouseci:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [16.x]
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
       - name: Build
         run: |
           npm ci
