--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/material": "^14.2.2",
     "@angular/platform-browser": "^14.2.2",
     "@angular/platform-browser-dynamic": "^14.2.2",
+    "@angular/platform-server": "^14.2.2",
     "@angular/router": "^14.2.2",
     "@angular/service-worker": "^14.2.2",
     "firebase": "^9.10.0",
