--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:ci": "npm run clean && npm run build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "explore": "source-map-explorer dist/**/*.js"
+    "explore": "source-map-explorer dist/**/*.js",
+    "compodoc": "compodoc src/app -p tsconfig.json --output reports/documentation/"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^14.2.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "compodoc": "^0.0.41",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
