--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@angular/platform-browser-dynamic": "^14.2.2",
     "@angular/router": "^14.2.2",
     "@angular/service-worker": "^14.2.2",
+    "@ngneat/transloco": "^4.1.1",
+    "@ngneat/transloco-messageformat": "^4.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "firebase": "^9.10.0",
     "lazysizes": "^5.3.2",
     "rxjs": "~6.6.0",
