--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,33 @@
 {
-  "hosting": {
-    "site": "fem-readup",
-    "public": "dist/fem-readup-search-engine-ng",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+  "hosting": [
+    {
+      "site": "fem-readup",
+      "public": "dist/fem-readup-search-engine-ng",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    }, {
+      "site": "fem-readup-preview",
+      "public": "dist/fem-readup-search-engine-ng",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
+    }
+  ]
 }
