--- a/.github/workflows/deploy-app-firebase-preview-workflow.yml
+++ b/.github/workflows/deploy-app-firebase-preview-workflow.yml
@@ -1,5 +1,11 @@
 name: Deploy to Firebase (preview)
-on: [pull_request, push]
+on:
+  pull_request:
+    branches-ignore:
+      - main
+  push:
+    branches-ignore:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
