--- a/.github/workflows/deploy-app-firebase-workflow.yml
+++ b/.github/workflows/deploy-app-firebase-workflow.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build Angular
         run: |
           npm install
-          npm run build -- --base-href "https://fem-readup.web.app/"
+          npm run build -- --base-href "https://allyup.de/"
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
